# cmpe58c_term_project

./: .gitignore  README.md  app.py  model_training_history.csv  pyproject.toml  run_evaluation.sh  run_training.sh  train_indoor_outdoor_net.ipynb
evaluation/: benchmark_inference.py  evaluate_hf_model.py  evaluate_model.py  save_misclassified.py
evaluation/evaluation_results/: classification_report.txt
evaluation/evaluation_results_hf/: classification_report_hf.txt
logs/: training_log.csv  training_log_phase1.csv  training_log_phase2.csv
src/: evaluation.py  utils.py
training/: image_classification_efficientnet_fine_tuning.ipynb  train_indoor_outdoor.py  train_phase1.py  train_phase2_finetune.py
